syntax="proto3";

package deploys;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/msalamati/watchdog/proto;deploys";

service DeployService {
    rpc AddDeploy(AddDeployRequest) returns (Deploy) {}
    rpc GetDeploy(GetDeployRequest) returns (Deploy) {}
}

enum DeployStatus {
    IN_PROGRESS = 0;
    SUCCEEDED = 1;
    FAILED = 2;
}

message Deploy {
    string id = 1;
    string service_name = 2;
    google.protobuf.Timestamp create_time = 3;
    DeployStatus status = 4;
}

message AddDeployRequest {
    string service_name = 1;
}

message GetDeployRequest {
    string id = 1;
}
